--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,5 +27,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
     compile 'com.squareup.okhttp:okhttp:2.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.0'
     testCompile 'junit:junit:4.12'
 }
